grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - grafana.dulik.net
    secretName: grafana-tls
  rules:
  - host: grafana.dulik.net
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
