nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cloud.dulik.net
    secretName: nextcloud-tls
  rules:
  - host: cloud.dulik.net
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 8080
