prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - prometheus.dulik.net
    secretName: prometheus-tls2
  rules:
  - host: prometheus.dulik.net
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 9090
